Fix item popups on Firefox.
Fixes #2206.

--- a/src/app/move-popup/move-popup.scss
+++ b/src/app/move-popup/move-popup.scss
@@ -7,7 +7,7 @@
 @import '../../scss/variables.scss';
 
 .move-popup-dialog {
-  height: fit-content;
+  bottom: initial !important;
 
   .arrow {
     width: 0;
